# Test02

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  KNOWN_ISSUES.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
api/: __init__.py  routes.py  schemas.py  tracing.py
cli/: __init__.py  review_pending.py
config/: __init__.py  settings.py
config/prompts/: classification.yaml  context_template.yaml  guardrails.yaml  hyde.yaml  quality_review.yaml  rewrite.yaml  summarization.yaml  system_prompt.yaml
data/: test_data.csv
docs/: chunker-refactor-report.md  demo.md  deployment.md  evaluation_report.md  frontend.md  performance-optimization-report.md  project-overview.md  windows-encoding-fix.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/diagnostics/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/evaluation/: page.tsx
frontend/src/components/chat/: ChatPanel.tsx  MessageInput.tsx  MessageList.tsx  SourcePanel.tsx  TraceSummary.tsx
frontend/src/components/diagnostics/: DiagnosticsPanel.tsx
frontend/src/components/documents/: DocumentsPanel.tsx
frontend/src/components/evaluation/: EvaluationPanel.tsx
frontend/src/components/layout/: AppSidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  textarea.tsx
frontend/src/lib/: api.ts  session.ts  stream.ts  types.ts
frontend/src/store/: chat-store.ts
samples/: README.md  demo_questions.md  demo_report.md
src/: __init__.py  config.py  types.py
src/agents/: __init__.py  generator.py  reviewer.py
src/cache/: __init__.py  semantic_cache.py
src/evaluation/: __init__.py  compare.py  online_evaluator.py  ragas_eval.py
src/graph/: __init__.py  hitl.py  router.py  state.py  workflow.py
src/ingestion/: __init__.py  chunker.py  document_structure.py  indexer.py  loader.py
src/memory/: __init__.py  long_term.py  medium_term.py  short_term.py
src/models/: __init__.py  embedding.py  embeddings.py  llm.py
src/retrieval/: __init__.py  adaptive.py  base.py  chunker.py  csv_aggregator.py  hyde.py  multi_step.py  no_retrieval.py  query_intent.py  query_rewriter.py  single_step.py
src/safety/: __init__.py  circuit_breaker.py  content_guard.py
src/utils/: __init__.py  json_parser.py  llm_factory.py  logger.py  observability.py  prompt_loader.py  token_manager.py
test_data/: article.txt  benchmark_prompt.md  benchmark_result.json  benchmark_result_after.json  benchmark_result_multiquery.json  benchmark_summary.csv  benchmark_summary_after.csv  benchmark_summary_multiquery.csv  diagnosis.py  employees.csv  evidence_coverage_prompt.md  full_audit_prompt.md  gpt_analysis_prompt.md  products.docx  regression.py  run_full_benchmark.py  starvault_questions.md  starvault_report.md  tech_comparison.md
tests/: __init__.py  test_circuit_breaker.py  test_graph_workflow.py  test_long_term.py  test_online_eval.py  test_ragas.py  test_retrieval.py  test_safety.py  test_workflow.py
ui/: __init__.py  app.py  utils.py
