[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-rag"
version = "1.0.0"
description = "自适应RAG文档问答系统 — 基于LangGraph的Adaptive-RAG学术前沿落地项目"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your@email.com"},
]
keywords = ["rag", "langgraph", "adaptive-rag", "hyde", "llm", "document-qa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LangGraph 工作流编排（← WeKnora engine.go 自研ReAct循环 → LangGraph StateGraph）
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",

    # 向量数据库与文档处理（← WeKnora pgvector/ES/Milvus → ChromaDB 单机版）
    "chromadb>=0.5.0",

    # 文档加载与分块（← WeKnora gRPC docreader → LangChain Loaders）
    "pymupdf>=1.24.0",           # PDF 解析
    "python-docx>=1.1.0",        # Word 文档解析
    "markdown>=3.6",             # Markdown 解析
    "unstructured>=0.15.0",      # 通用文档加载

    # 检索增强（← WeKnora BM25 + Rerank）
    "rank-bm25>=0.2.2",          # BM25 关键词检索（← grep_chunks.go）
    "sentence-transformers>=3.0", # 本地 Embedding 模型

    # 配置与数据模型
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",

    # YAML Prompt 管理（← WeKnora prompts.go 动态变量插值）
    "pyyaml>=6.0",
    "jinja2>=3.1",               # YAML 模板中的变量插值

    # API 与 UI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.35.0",         # ★ 主力演示 UI（← WeKnora React SPA）

    # Token 估算（← WeKnora token/estimator.go BPE → tiktoken）
    "tiktoken>=0.7.0",

    # 评估体系
    "ragas>=0.2.0",
    "datasets>=3.0",

    # 工具
    "rich>=13.0",                # 美化终端输出
    "httpx>=0.27.0",            # 异步 HTTP 客户端
    "tenacity>=9.0",            # 重试策略
    "structlog>=24.0",          # 结构化日志
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
]

[project.scripts]
adaptive-rag = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "api*", "ui*", "cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
