[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-rag"
version = "1.0.0"
description = "Adaptive RAG document QA system based on LangGraph"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Adaptive RAG", email = "dev@example.com"},
]
keywords = ["rag", "langgraph", "adaptive-rag", "hyde", "llm", "document-qa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.5.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "docx2txt>=0.8",
    "markdown>=3.6",
    "unstructured>=0.15.0",
    "pandas>=2.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "streamlit>=1.35.0",
    "tiktoken>=0.7.0",
    "ragas>=0.2.0",
    "datasets>=3.0",
    "langchain-google-vertexai>=3.0",
    "rich>=13.0",
    "httpx>=0.27.0",
    "tenacity>=9.0",
    "langfuse==4.14.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.44.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
]

[project.scripts]
adaptive-rag = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "api*", "ui*", "cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
]